[gd_scene load_steps=9 format=3 uid="uid://c4pv8emq2w6hy"]

[ext_resource type="Script" uid="uid://vy0s6q4ywn7k" path="res://scripts/game_manager.gd" id="1_tefeu"]
[ext_resource type="Script" uid="uid://k7cvadgfe155" path="res://scripts/loop_drawer.gd" id="2_o6xl0"]
[ext_resource type="Script" uid="uid://dyqthfxohiyaq" path="res://scripts/ship_manager.gd" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://bmcm6wisrfwyy" path="res://scripts/ship_debug_ui.gd" id="6_debug"]
[ext_resource type="Texture2D" uid="uid://bph7hh3qqcmea" path="res://sprites/city.png" id="6_ya4ey"]
[ext_resource type="Script" uid="uid://cepbueidsicgu" path="res://scripts/ship_part.gd" id="7_tipki"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_o6xl0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ya4ey")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main" type="Node2D" node_paths=PackedStringArray("loop_drawer")]
script = ExtResource("1_tefeu")
map_size = Rect2(-240, -130, 480, 260)
min_distance = 30.0
loop_drawer = NodePath("ShipManager/LoopDrawer")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ShipDebugUI" type="Label" parent="UI" node_paths=PackedStringArray("ship_manager")]
script = ExtResource("6_debug")
ship_manager = NodePath("../../ShipManager")

[node name="Instructions" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -60.0
offset_right = 401.0
offset_bottom = -10.0
grow_vertical = 0
text = "Left click and drag to draw lines
Line turns red when you can close the loop"
vertical_alignment = 2

[node name="ClearButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
text = "Clear Lines"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-288, -162)

[node name="ShipManager" type="Node2D" parent="."]
position = Vector2(0, 79)
script = ExtResource("5_tbgi4")

[node name="LoopDrawer" type="Node2D" parent="ShipManager"]
position = Vector2(0, -79)
script = ExtResource("2_o6xl0")

[node name="CurrentLine" type="Line2D" parent="ShipManager/LoopDrawer"]
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Shield_NE" type="StaticBody2D" parent="ShipManager"]
position = Vector2(36, -23)
input_pickable = true
script = ExtResource("7_tipki")
direction = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipManager/Shield_NE"]
shape = SubResource("RectangleShape2D_tefeu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ShipManager/Shield_NE"]
sprite_frames = SubResource("SpriteFrames_o6xl0")

[connection signal="pressed" from="UI/ClearButton" to="." method="_on_clear_button_pressed"]
